--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^17.0.2",
+    "react-download-link": "^2.3.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
